AddNewToDo.js, uuid npm installation

--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,7 @@ a{
 
 }
 header{
- background-color: blanchedalmond;
+ background-color: rgb(58, 56, 56);
   border-bottom:2px #c3c3c3 solid;
+  color:white;
 }
