--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,14 @@ body{
 }
 
 a{
-  color: blueviolet;
+  color: rgb(255, 255, 255);
+  text-decoration: none;
+  padding:10px;
+  transition:background-color 0.5s, color 0.5s;
+}
+a:hover{
+  background-color:white;
+  color:black;
   text-decoration: none;
 }
 .App{
