minor css changes

--- a/src/App.css
+++ b/src/App.css
@@ -32,3 +32,7 @@ header{
   border-bottom:2px #c3c3c3 solid;
   color:white;
 }
+.btn-primary:disabled{
+  background-color: rgb(171, 173, 173);
+  border-color:rgb(171, 173, 173);
+}
